Refactor GpuMemoryBufferVideoFramePool usage in WebMediaPlayerMS

- Posts GpuMemoryBufferVideoFramePool::Abort() calls on the correct thread.
- Avoids unnecessary Abort calls when there isn't an active task.
- Renames FrameReady() to EnqueueFrame().

Bug: 653200
Change-Id: Iaa98be89f34cf4d76855c51b6121b877bf44a6c5
Reviewed-on: https://chromium-review.googlesource.com/974308
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Commit-Queue: Emircan Uysaler <emircan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545168}
Former-commit-id: e269e69cccd1561bb8270760d46cabc40c0c60b9